--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "startup-server",
     "version": "1.0.0",
     "description": "My startup with server endpoints",
-    "main": "server.js",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
