--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "body-parser": "^1.20.2",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "mongodb": "^6.5.0"
+        "mongodb": "^6.5.0",
+        "ws": "^8.16.0"
     },
     "devDependencies": {
         "@types/chart.js": "^2.9.41"
