--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.5.0",
+        "uuid": "^9.0.1",
         "ws": "^8.16.0"
     },
     "devDependencies": {
